[package]
name = "urlshortener"
version = "3.2.1"
edition = "2021"
authors = ["Victor Polevoy <maintainer@vpolevoy.com>"]
description = "A very simple url shortener client library"
readme = "README.md"
license = "MIT"
keywords = ["url", "short", "shortener", "link"]
repository = "https://github.com/iddm/urlshortener-rs"
documentation = "https://docs.rs/urlshortener"

[dependencies]
url = "2"

[dependencies.reqwest]
version = "0.12"
features = ["blocking"]
optional = true

[features]
default = ["client"]
client = ["reqwest"]
